# pneumonia-detection-render

./: .env.example  .gitignore  .renderignore  CHANGES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  app.py  config.py  deploy.bat  deploy.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  render.yaml  render_updated.yaml  requirements.txt  vercel.json  wsgi.py
templates/: index.html
