[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pneumonia-detection"
version = "1.0.0"
description = "Pneumonia Detection from Chest X-rays using ResNet18"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "Pillow==10.1.0",
    "gunicorn==21.2.0",
    "numpy==1.24.3",
    "torch==2.0.1",
    "torchvision==0.15.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
